Fix: major bugs

--- a/frontend/container2.html
+++ b/frontend/container2.html
@@ -179,6 +179,7 @@
                     if (this.loadingCount < 0) {
                         this.loadingCount = 0;
                     }
+                    $('body').css('overflow-y', 'auto');
                 }
             }
         });
