--- a/frontend/container2.html
+++ b/frontend/container2.html
@@ -42,6 +42,10 @@
                    data-view="strategy">
                 回测
             </a></li>
+            <li><a href="javascript:" v-bind:class="{ act: selected == 'simulate' }" v-on:click="navClick"
+                   data-view="simulate">
+                模拟交易
+            </a></li>
             <li><a href="javascript:" v-bind:class="{ act: selected == 'forum' }" v-on:click="navClick"
                    data-view="forum">
                 讨论区
